# rustio-draft

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
assets/: studio.html
demo/: rustio-draft.tape
src/: client.rs  diff.rs  lib.rs  main.rs  schema.rs  server.rs
