# rustio-draft — its own repo (separate from the rustio-admin framework).
# This is the one place in the ecosystem that calls an LLM, so its network/LLM
# dependencies stay out of the runtime crate entirely. Design + boundary:
# https://github.com/abdulwahed-sweden/rustio-admin/blob/main/docs/RUSTIO_DRAFT_SCOPE.md
[workspace]

[package]
name = "rustio-draft"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Setup-time genesis: turn a natural-language brief into a rustio-admin schema.json via Claude. Never runs at runtime."
license = "MIT"

[lib]
name = "rustio_draft"
path = "src/lib.rs"

[[bin]]
name = "rustio-draft"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# Load ANTHROPIC_API_KEY from a local `.env` (gitignored) if present. Never
# overrides a real environment variable.
dotenvy = "0.15"
# Local-only web wizard (`rustio-draft serve`). Bound to 127.0.0.1; the API key
# stays server-side. Like the rest of this crate's deps, it never reaches runtime.
axum = "0.8"
